# rN-INCOMING-CALl

./: CONTRIBUTING.md  COPYING  Makefile.am  README.md  REVIEWERS  autogen.sh  configure.ac  libbitcoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
build-aux/m4/: ax_boost_base.m4  ax_boost_filesystem.m4  ax_boost_system.m4  ax_boost_unit_test_framework.m4  ax_cxx_compile_stdcxx.m4  ax_pthread.m4  bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_runtime_lib.m4  l_atomic.m4  l_socket.m4
build_msvc/: bitcoin.sln  bitcoin_config.h.in  common.init.vcxproj  msvc-autogen.py
build_msvc/bench_bitcoin/: bench_bitcoin.vcxproj.in
build_msvc/bitcoin-cli/: bitcoin-cli.vcxproj
build_msvc/bitcoin-qt/: bitcoin-qt.vcxproj
build_msvc/bitcoin-tx/: bitcoin-tx.vcxproj
build_msvc/bitcoind/: bitcoind.vcxproj
build_msvc/libbitcoin_crypto/: libbitcoin_crypto.vcxproj.in
build_msvc/libbitcoin_qt/: libbitcoin_qt.vcxproj
build_msvc/libbitcoin_util/: libbitcoin_util.vcxproj.in
build_msvc/libbitcoin_wallet/: libbitcoin_wallet.vcxproj.in
build_msvc/libbitcoin_wallet_tool/: libbitcoin_wallet_tool.vcxproj.in
build_msvc/libbitcoin_zmq/: libbitcoin_zmq.vcxproj.in
build_msvc/libleveldb/: libleveldb.vcxproj
build_msvc/libminisketch/: libminisketch.vcxproj
build_msvc/libsecp256k1/: libsecp256k1.vcxproj
build_msvc/test_bitcoin/: test_bitcoin.vcxproj
build_msvc/test_bitcoin-qt/: test_bitcoin-qt.vcxproj
ci/: README.md
ci/lint/: 04_install.sh  06_script.sh
ci/retry/: README.md
ci/test/: 00_setup_env.sh  00_setup_env_arm.sh  00_setup_env_i686_centos.sh  00_setup_env_mac.sh  00_setup_env_mac_host.sh  00_setup_env_native_asan.sh  00_setup_env_native_fuzz.sh  00_setup_env_native_fuzz_with_msan.sh  00_setup_env_native_fuzz_with_valgrind.sh  00_setup_env_native_msan.sh  00_setup_env_native_nowallet.sh  00_setup_env_native_qt5.sh  00_setup_env_native_tsan.sh  04_install.sh  05_before_script.sh  06_script_b.sh  wrap-valgrind.sh
contrib/: README.md  bitcoin-cli.bash-completion  install_db4.sh  valgrind.supp
contrib/builder-keys/: keys.txt
contrib/debian/: copyright
contrib/devtools/: README.md  circular-dependencies.py  copyright_header.py  security-check.py  symbol-check.py  test-security-check.py  test-symbol-check.py  test_deterministic_coverage.sh  utils.py
contrib/guix/: INSTALL.md  README.md  guix-attest  guix-build  guix-codesign  guix-verify  manifest.scm
depends/: Makefile  README.md  config.guess  config.sub  funcs.mk  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  REST-interface.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-android.md  build-freebsd.md  build-netbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  productivity.md  psbt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  tracing.md  translation_process.md  translation_strings_policy.md  zmq.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.minisketch.include  Makefile.qt.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  Makefile.univalue.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  attributes.h  banman.cpp  base58.cpp  base58.h  bech32.cpp  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind.cpp  blockencodings.cpp  blockencodings.h  blockfilter.cpp  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  coins.cpp  (+96 more)
src/crc32c/: CMakeLists.txt  CONTRIBUTING.md  Crc32cConfig.cmake.in  README.md
src/crc32c/include/crc32c/: crc32c.h
src/crc32c/src/: crc32c_arm64.cc  crc32c_arm64.h  crc32c_arm64_check.h  crc32c_benchmark.cc  crc32c_capi_unittest.c  crc32c_extend_unittests.h  crc32c_internal.h  crc32c_portable.cc  crc32c_read_le.h  crc32c_read_le_unittest.cc  crc32c_round_up.h  crc32c_round_up_unittest.cc  crc32c_sse42.cc  crc32c_sse42.h  crc32c_sse42_unittest.cc  crc32c_unittest.cc
src/secp256k1/: Makefile.am  README.md  configure.ac
src/secp256k1/build-aux/m4/: bitcoin_secp.m4
src/secp256k1/contrib/: lax_der_parsing.c  lax_der_parsing.h  lax_der_privatekey_parsing.c  lax_der_privatekey_parsing.h
src/secp256k1/doc/: safegcd_implementation.md
src/secp256k1/include/: secp256k1.h  secp256k1_ecdh.h  secp256k1_extrakeys.h  secp256k1_preallocated.h  secp256k1_recovery.h  secp256k1_schnorrsig.h
src/secp256k1/sage/: gen_exhaustive_groups.sage  gen_split_lambda_constants.sage  group_prover.sage  prove_group_implementations.sage  secp256k1_params.sage  weierstrass_prover.sage
src/secp256k1/src/: assumptions.h  bench.c  bench.h  bench_ecmult.c  bench_internal.c  ecdsa_impl.h  eckey.h  eckey_impl.h  ecmult.h  ecmult_const_impl.h  ecmult_gen_impl.h  ecmult_gen_prec.h  ecmult_gen_static_prec_table.h  ecmult_impl.h  ecmult_static_pre_g.h  field.h  field_10x26.h  field_10x26_impl.h  field_5x52_asm_impl.h  field_5x52_impl.h  field_5x52_int128_impl.h  field_impl.h  gen_ecmult_gen_static_prec_table.c  gen_ecmult_static_pre_g.c  group.h  group_impl.h  hash.h  hash_impl.h  modinv32.h  modinv32_impl.h  modinv64_impl.h  scalar.h  scalar_4x64_impl.h  scalar_8x32.h  scalar_8x32_impl.h  scalar_impl.h  scalar_low_impl.h  scratch.h  scratch_impl.h  secp256k1.c  (+7 more)
src/secp256k1/src/asm/: field_10x26_arm.s
src/secp256k1/src/modules/ecdh/: Makefile.am.include  bench_impl.h  tests_impl.h
src/secp256k1/src/modules/extrakeys/: Makefile.am.include  main_impl.h  tests_impl.h
src/secp256k1/src/modules/recovery/: main_impl.h  tests_exhaustive_impl.h  tests_impl.h
src/secp256k1/src/modules/schnorrsig/: bench_impl.h  main_impl.h  tests_exhaustive_impl.h  tests_impl.h
test/: README.md  get_previous_releases.py
(+1162 files in other folders)
